# SounDAC-Source

./: .gitmodules  .travis.yml  BUILD_OSX.md  BUILD_UBUNTU.md  CMakeLists.txt  Dockerfile  Doxyfile  README-docker.md  README.md  genesis-test.json  sonar-project.properties
Docker/: config.ini  entrypoint.sh
doc/: debug_node_plugin.md  plugin-custom-tags.md
libraries/app/: api.cpp  application.cpp  database_api.cpp  impacted.cpp  plugin.cpp
libraries/app/include/muse/app/: api_context.hpp  database_api.hpp
libraries/chain/: asset_evaluator.cpp  base_evaluator.cpp  block_database.cpp  database.cpp  get_config.cpp  muse_evaluator.cpp  proposal_evaluator.cpp  proposal_object.cpp
libraries/chain/hardfork.d/: 0-4.hf  0-5.hf  0-6.hf  0-preamble.hf
libraries/chain/protocol/: base_operations.cpp  muse_operations.cpp  proposal.cpp  transaction.cpp  types.cpp  version.cpp
libraries/db/: undo_database.cpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
libraries/manifest/: mf_plugins.cpp
libraries/net/: message_oriented_connection.cpp  node.cpp
libraries/plugins/account_history/: account_history_plugin.cpp
libraries/plugins/auth_util/: auth_util_api.cpp  auth_util_plugin.cpp
libraries/plugins/block_info/: block_info_api.cpp  block_info_plugin.cpp
libraries/plugins/debug_node/: debug_node_plugin.cpp
libraries/plugins/private_message/: private_message_plugin.cpp
libraries/plugins/raw_block/: raw_block_api.cpp  raw_block_plugin.cpp
libraries/wallet/: CMakeLists.txt  wallet.cpp
programs/build_helpers/: set_sonar_branch
programs/js_operation_serializer/: main.cpp
programs/mused/: main.cpp
programs/util/: get_dev_key.cpp  inflation_model.cpp  map_muse_network.cpp  sign_digest.cpp  sign_transaction.cpp
programs/util/faucet/: faucet.cgi  faucet.html
tests/common/: database_fixture.cpp
tests/plugin_tests/: market_history.cpp
tests/tests/: api_tests.cpp  asset_tests.cpp  authority_tests.cpp  block_tests.cpp  database_tests.cpp  muse_tests.cpp  operation_tests.cpp  operation_time_tests.cpp  reward_tests.cpp  serialization_tests.cpp
(+24 files in other folders)
